--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 
-spring.datasource.url= jdbc:postgresql://localhost:5432/hogwarts
-spring.datasource.username= student
+spring.datasource.url=jdbc:postgresql://localhost:5432/hogwarts
+spring.datasource.username=student
 spring.datasource.password= chocolatefrog
 spring.jpa.hibernate.ddl-auto=update
+
+avatars.dir.path=avatars
